--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,19 +7,35 @@
 <section class="section-conten padding-y" style="min-height:84vh">
 
 <!-- ============================ COMPONENT LOGIN   ================================= -->
+
+{% if request.GET.command == 'verification' %}
+
+<div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 640px; margin-top:100px;">
+  <h4 class="alert-heading">Verification email sent</h4>
+  <br>
+  <p>A verification email has been sent to this email: <strong>{{request.GET.email}}</strong>. Please check your email and click on the link to verify your account.</p>
+  <br><br>
+  <p  class="text-center">Already verified? <a href="{% url 'login' %}" >Login here.</a></p>
+
+</div>
+
+{% else %}
+
 	<div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
+        {% include 'includes/alerts.html' %}
       <div class="card-body">
       <h4 class="card-title mb-4">Sign in</h4>
-      <form>
+      <form action="{% url 'login' %}" method="POST">
+        {% csrf_token %}
           <div class="form-group">
-			 <input type="email" class="form-control" placeholder="Email Address" >
+			 <input type="email" class="form-control" placeholder="Enter your email eddress" name="email" >
           </div> <!-- form-group// -->
           <div class="form-group">
-			<input type="password" class="form-control" placeholder="Password" >
+			<input type="password" class="form-control" placeholder="Enter your password" name="password">
           </div> <!-- form-group// -->
           
           <div class="form-group">
-          	<a href="#" class="float-right">Forgot password?</a> 
+          	<a href="{% url 'forgot_password' %}" class="float-right">Forgot password?</a> 
            
           </div> <!-- form-group form-check .// -->
           <div class="form-group">
@@ -32,7 +48,7 @@
      <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
      <br><br>
 <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-
+{% endif %}
 
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
